[gd_scene load_steps=8 format=2]

[ext_resource path="res://WndLose.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/wnd_main_background2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/wnd_lose.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/btn_home.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/btn_reload.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/btn_menu.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/stars_zero.png" type="Texture" id=7]

[node name="WndLose" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="wnd" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )

[node name="btnHome" type="TextureButton" parent="wnd" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -464.0
margin_top = 272.0
margin_right = -293.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="btnReload" type="TextureButton" parent="wnd" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -112.0
margin_top = 272.0
margin_right = 59.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="btnMenu" type="TextureButton" parent="wnd" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 272.0
margin_right = 427.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="stars" type="Sprite" parent="wnd" index="3"]

position = Vector2( 0, -32 )
texture = ExtResource( 7 )

[connection signal="pressed" from="wnd/btnHome" to="." method="_on_btnHome_pressed"]

[connection signal="pressed" from="wnd/btnReload" to="." method="_on_btnReload_pressed"]

[connection signal="pressed" from="wnd/btnMenu" to="." method="_on_btnMenu_pressed"]


